force-app/main/default/objects/NDT_Item__c/NDT_Item__c.object-meta.xml
<CustomObject>
    <label>NDT Item</label>
    <nameField>
        <displayFormat>NDTI-{0000}</displayFormat>
        <label>NDT Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDT Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>