force-app/main/default/objects/NDT_Item__c/fields/Asset_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Component_Type__c</fullName>
    <label>Asset Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Component_Type</valueSetName>
    </valueSet>
</CustomField>