force-app/main/default/objects/NDT_Item__c/fields/Category_III_4380_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Category_III_4380_Hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>4380 Operating Hours = 6 Months of Operating</description>
    <inlineHelpText>Select if the NDT Point requires a CAT III every 4380hrs</inlineHelpText>
    <label>Category III (4380 Hrs)</label>
    <type>Checkbox</type>
</CustomField>