force-app/main/default/objects/NDT_Item__c/fields/Category_III_8760_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Category_III_8760_Hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>8760 Operating Hours = 12 Months of Operating</description>
    <inlineHelpText>Select if the NDT Point requires a CAT III every 8760 Hrs</inlineHelpText>
    <label>Category III (8760 Hrs)</label>
    <type>Checkbox</type>
</CustomField>