force-app/main/default/objects/NDT_Item__c/fields/Category_IV__c.field-meta.xml
<CustomField>
    <fullName>Category_IV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the NDT Point requires a CAT IV</inlineHelpText>
    <label>Category IV</label>
    <type>Checkbox</type>
</CustomField>