force-app/main/default/objects/NDT_Item__c/fields/Inspection_Detail__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Detail__c</fullName>
    <label>Inspection Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>