force-app/main/default/objects/NDT_Item__c/fields/NDT_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>NDT_Item_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDT Item Name</label>
    <type>Text</type>
</CustomField>