force-app/main/default/objects/NDT_Item__c/fields/Points_Of_Inspection_Pass__c.field-meta.xml
<CustomField>
    <fullName>Points_Of_Inspection_Pass__c</fullName>
    <label>Points Of Inspection [Pass]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hinge</fullName>
            </value>
            <value>
                <fullName>Hinge Pin</fullName>
            </value>
            <value>
                <fullName>Bail Ears</fullName>
            </value>
            <value>
                <fullName>Latch</fullName>
            </value>
            <value>
                <fullName>Latch Pin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>