force-app/main/default/objects/NDT_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NDT_Item_Name__c</columns>
    <columns>Asset_Component_Type__c</columns>
    <columns>Category_III_4380_Hrs__c</columns>
    <columns>Category_III_8760_Hrs__c</columns>
    <columns>Category_IV__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>